k8s/cv-service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: cv-service-db
spec:
  ports:
  - port: 3306
  selector:
    app: cv-service-db
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cv-service-db-deploy
spec:
  selector:
    matchLabels:
      app: cv-service-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: cv-service-db
    spec:
      containers:
      - image: mysql:5.7
        name: cv-service-db
        ports:
        - containerPort: 3306
          name: cv-service-db
        volumeMounts:
        - name: cv-service-db-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: cv-service-db-persistent-storage
        persistentVolumeClaim:
          claimName: cv-service-db-pvc
