k8s/cv-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cv-service
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: cv-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cv-service
  name: cv-service-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cv-service
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: cv-service
    spec:
      containers:
      - name: cv-service
        image: lityourcode/cv-service:0.2
        livenessProbe:
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 120
          timeoutSeconds: 5
        ports:
        - containerPort: 8080
          name: http
