k8s/redis-cache-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-cache-service
spec:
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app: redis-cache-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis-cache-service
  name: redis-cache-service-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-cache-service
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: redis-cache-service
    spec:
      containers:
      - name: redis-cache-service
        image: redis:6.0.9
        command: ["redis-server", "/conf/volatile-redis-cache.conf"]
        readinessProbe:
          exec:
            command:
            - sh
            - -c
            - "redis-cli -h $(hostname) ping"
          initialDelaySeconds: 15
          timeoutSeconds: 5
        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - "redis-cli -h $(hostname) ping"
          initialDelaySeconds: 20
          periodSeconds: 3
        volumeMounts:
        - name: conf
          mountPath: /conf
          readOnly: false
        - name: data
          mountPath: /data
          readOnly: false
      volumes:
      - name: conf
        configMap:
          name: redis-config-maps
          defaultMode: 0755
          items:
          - key: volatile-redis-cache.conf
            path: volatile-redis-cache.conf
      - name: data
        persistentVolumeClaim:
          claimName: redis-cache-service-pvc
