k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-exercises-ingress
  namespace: k8s-exercises
spec:
  rules:
  - host: k8s-exercises.chilling.dev
  - http:
      paths:
      - path: /(cv)?
        pathType: Exact
        backend:
          service:
            name: cv-service
            port:
              number: 8080
